--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -59,9 +59,8 @@
                     <span class="desc">$T('explain-email_dir')</span>
                 </div>
                 <div class="field-pair">
-                    <!-- Here we add "search" to the ID as an exception to stop Password Managers (like LastPass)! --> 
-                    <label class="config" for="password_file-search">$T('opt-password_file')</label>
-                    <input type="text" name="password_file" id="password_file-search" value="$password_file" />
+                    <label class="config" for="password_file">$T('opt-password_file')</label>
+                    <input type="text" name="password_file" id="password_file" value="$password_file" />
                     <span class="desc">$T('explain-password_file')</span>
                 </div>
                 <div class="field-pair">
